# alphax_wallet

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
alphax_wallet/: hooks.py  install.py  modules.txt  patches.txt
alphax_wallet/alphax_wallet/: api_actions.py  api_dashboard.py  api_diagnostics.py  api_vendor.py  boot.py  gl_posting.py  palette_utils.py  permissions.py  tasks.py  wallet_engine.py
alphax_wallet/alphax_wallet/dashboard_chart/: topups_vs_withdrawals.json  wallet_liability_trend.json
alphax_wallet/alphax_wallet/doctype/booking_commission/: booking_commission.js  booking_commission.json  booking_commission.py
alphax_wallet/alphax_wallet/doctype/booking_commission_item/: booking_commission_item.json  booking_commission_item.py
alphax_wallet/alphax_wallet/doctype/customer_wallet/: customer_wallet.js  customer_wallet.json  (+1 more)
alphax_wallet/alphax_wallet/events/: customer.py  delivery_note.py  payment_entry.py  purchase_documents.py  sales_invoice.py  sales_order.py
alphax_wallet/alphax_wallet/number_card/: active_wallets.json  held_today.json  topups_today.json  total_wallet_liability.json
alphax_wallet/api/: wallet.py
alphax_wallet/patches/v1_1/: audit_multi_currency_wallets.py
alphax_wallet/patches/v1_5/: migrate_themes_to_brands.py
alphax_wallet/public/css/: alphax_wallet.css
alphax_wallet/public/js/: alphax_wallet.js  customer.js  payment_entry.js  sales_invoice.js  sales_order.js
alphax_wallet/tests/: test_wallet_engine.py
alphax_wallet/www/: wallet.html  wallet.py
(+35 files in other folders)
